# ucommon

./: .gitignore  .travis.yml  AUTHORS  BUILDS  CMakeLists.txt  COPYRIGHT  ChangeLog  Doxyfile  Makefile.am  NEWS  README  README.secure  SUPPORT  TODO  autogen.sh  cmodel.sh  commoncpp-config.1  commoncpp-config.cmake  commoncpp-config.in  commoncpp.pc.cmake  commoncpp.pc.in  config.h.cmake  configure.ac  directive  doxy.config.cmake  exports  libucommon.pc.in  reconfig  ucommon-config.1  ucommon-config.cmake  ucommon-config.h.cmake  ucommon-config.in  ucommon.pc.cmake  ucommon.pc.in  ucommon.spec.cmake  ucommon.spec.in
audio/: Makefile.am  buffer.cpp  codecs.cpp  common.cpp  files.cpp  g711.cpp  local.h  reader.cpp  writer.cpp
common/: Makefile.am  access.cpp  atomic.cpp  bitmap.cpp  buffer.cpp  bufio.cpp  containers.cpp  counter.cpp  cpr.cpp  datetime.cpp  fsys.cpp  iob.cpp  keydata.cpp  linked.cpp  mapped.cpp  memory.cpp  numbers.cpp  object.cpp  persist.cpp  protocols.cpp  shell.cpp  socket.cpp  stream.cpp  string.cpp  thread.cpp  timer.cpp  unicode.cpp  vector.cpp  xml.cpp
commoncpp/: Makefile.am  address.cpp  applog.cpp  dccp.cpp  dso.cpp  exception.cpp  file.cpp  linked.cpp  map.cpp  mime.cpp  misc.cpp  numbers.cpp  pointer.cpp  process.cpp  serial.cpp  slog.cpp  socket.cpp  strchar.cpp  tcp.cpp  thread.cpp  tokenizer.cpp  udp.cpp
core/: access.cpp  bufio.cpp  containers.cpp  counter.cpp  datetime.cpp  keydata.cpp  memory.cpp  persist.cpp  string.cpp  thread.cpp  timer.cpp
corelib/: Makefile.am  access.cpp  atomic.cpp  bitmap.cpp  bufio.cpp  charfile.cpp  containers.cpp  counter.cpp  cpr.cpp  datetime.cpp  file.cpp  fsys.cpp  keydata.cpp  linked.cpp  mapped.cpp  memory.cpp  numbers.cpp  object.cpp  persist.cpp  protocols.cpp  regex.cpp  shell.cpp  socket.cpp  stream.cpp  string.cpp  tcpbuffer.cpp  thread.cpp  timer.cpp  unicode.cpp  vector.cpp  xml.cpp
cppunit/: Makefile.am  unit.cpp
debian/: README  README.Debian  changelog  control  copyright  docs  libucommon-dev.dirs  libucommon-dev.install  libucommon-doc.dirs  libucommon-doc.install  libucommon.doc-base.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex
gnutls/: Makefile.am  cipher.cpp  digest.cpp  hmac.cpp  local.h  random.cpp  secure.cpp  ssl.cpp  ssocket.cpp  sstream.cpp
inc/: Makefile.am  access.h  config.h.in  counter.h  export.h  file.h  linked.h  memory.h  minimal.cmake  misc.h  object.h  process.h  shared.cmake  socket.h  static.cmake  string.h  thread.h  timers.h  ucommon.cmake  ucommon.h  vector.h
inc/commoncpp/: Makefile.am  address.h  applog.h  commoncpp.h  config.h  dccp.h  exception.h  export.h  file.h  mime.h  misc.h  numbers.h  object.h  pointer.h  process.h  serial.h  slog.h  socket.h  string.h  tcp.h  thread.h  tokenizer.h  udp.h
inc/ucommon/: Makefile.am  access.h  aio.h  atomic.h  audio.h  bitmap.h  buffer.h  config.h  containers.h  counter.h  cpr.h  datetime.h  export.h  file.h  format.h  fsys.h  generics.h  ipc.h  keydata.h  linked.h  mapped.h  memory.h  misc.h  numbers.h  object.h  persist.h  platform.h  proc.h  process.h  protocols.h  script.h  secure.h  service.h  shell.h  socket.h  stl.h  stream.h  string.h  thread.h  timers.h  (+4 more)
insecure/: Makefile.am  cipher.cpp  digest.cpp  local.h  random.cpp  secure.cpp  ssocket.cpp  test.cpp
nossl/: Makefile.am  cipher.cpp  common.cpp  digest.cpp  hmac.cpp  local.h  md5.c  md5.cpp  md5.h  random.cpp  secure.cpp  sha1.c  sha1.cpp  sha1.h  ssl.cpp  ssocket.cpp  sstream.cpp
openssl/: Makefile.am  README  cipher.cpp  digest.cpp  hmac.cpp  local.h  random.cpp  secure.cpp  ssl.cpp  ssocket.cpp  sstream.cpp
packaging/arch/: .gitignore  PKGBUILD
packaging/debian/: changelog  control  copyright  docs  libucommon-dev.install  libucommon6.install  libucommon7.install  rules  ucommon-bin.install  ucommon-doc.doc-base  ucommon-doc.install  watch
script/: Makefile.am  checks.cpp  common.cpp  interp.cpp  methods.cpp
src/: CMakeLists.txt  Makefile.am  access.cpp  aio.cpp  bitmap.cpp  config.cpp  counter.cpp  cpr.cpp  datetime.cpp  file.cpp  fsys.cpp  ipc.cpp  keydata.cpp  linked.cpp  mapped.cpp  memory.cpp  misc.cpp  new.cpp  numbers.cpp  object.cpp  persist.cpp  process.cpp  service.cpp  shell.cpp  socket.cpp  stream.cpp  string.cpp  thread.cpp  timer.cpp  unicode.cpp  vector.cpp  xml.cpp
test/: CMakeLists.txt  Makefile.am  audio.cpp  cipher.cpp  datetime.cpp  digest.cpp  keydata.conf  keydata.cpp  linked.cpp  memory.cpp  mergescript.scr  queue.cpp  script.cpp  shell.cpp  socket.cpp  ssl.cpp  stdcpp.cpp  stream.cpp  string.cpp  testscript.scr  thread.cpp  unicode.cpp
util/: ucontrol.cpp
utils/: Makefile.am  args.1  args.cpp  attach.c  audiotool.1  audiotool.cpp  car.1  car.cpp  keywait.1  keywait.cpp  mdsum.1  mdsum.cpp  pdetach.1  pdetach.cpp  scrub-files.1  scrub.1  scrub.cpp  sockaddr.1  sockaddr.cpp  ssl.cpp  uattach.cpp  ucontrol.c  ucontrol.cpp  udetach.c  udetach.cpp  ushmdump.cpp  utdetach.c  zerofill.1  zerofill.cpp
